# multigen

./: .gitignore  404.html  CHANGELOG.md  Makefile  PROJECT_REVIEW.md  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/backends/: index.html
api/frontend/: index.html
api/pipeline/: index.html
api/verification/: index.html
assert_implementation/: index.html
backend_comparison/: index.html
backend_selection_guide/: index.html
dev-guide/architecture/: index.html
dev-guide/contributing/: index.html
dev-guide/testing/: index.html
dev/LLVM_BACKEND_ROADMAP/: index.html
dev/cgen-mgen-integration-status/: index.html
dev/ir_to_llvm_ir/: index.html
dev/llvm_backend_guide/: index.html
dev/llvm_jit/: index.html
dev/llvm_jit_summary/: index.html
dev/llvm_memory_safety_report/: index.html
dev/llvm_memory_testing/: index.html
dev/llvm_performance_analysis/: index.html
dev/memory_testing_summary/: index.html
dev/was-z3-worth-it/: index.html
dev/wasm_investigation_report/: index.html
docs/: BACKEND_COMPARISON.md  BACKEND_SELECTION_GUIDE.md  USE_CASES.md  assert_implementation.md  c_backend_plan.md  cpp_build_fix.md  failure_analysis_report.md  go_build_fix.md  haskell_backend_limitations.md  haskell_build_fix.md  index.md  next_steps.md  ocaml_build_fix.md  production_roadmap.md  rust_build_fix.md  supported_syntax.md  tier2_fixes_summary.md  translation_test.md
docs/api/: backends.md  frontend.md  pipeline.md  verification.md
docs/dev/: LLVM_BACKEND_ROADMAP.md  c_backend_improvement_plan.md  cgen-mgen-integration-status.md  cgen_analysis_summary.md  cgen_mgen_comparison.md  cli-redesign.md  generator-yield-plan.md  immutablity-analysis.md  ir_to_llvm_ir.md  llvm_backend_complete.md  llvm_backend_guide.md  llvm_jit.md  llvm_jit_summary.md  llvm_memory_safety_report.md  llvm_memory_testing.md  llvm_performance_analysis.md  memory_testing_summary.md  was-z3-worth-it.md  wasm_investigation_report.md
docs/dev-guide/: architecture.md  contributing.md  testing.md
docs/guide/: backends.md  installation.md  quickstart.md  verification.md
docs/sphinx/: README.md
guide/backends/: index.html
guide/installation/: index.html
guide/quickstart/: index.html
guide/verification/: index.html
haskell_backend_limitations/: index.html
scripts/: benchmark.py  generate_benchmark_report.py  test_llvm_memory.sh
search/: search_index.json
src/mgen/: pipeline.py
src/multigen/: __init__.py  error_formatter.py  errors.py  pipeline.py  pipeline_types.py
supported_syntax/: index.html
tests/: test_backend_c_augassign.py  test_backend_c_basics.py  test_backend_c_builtins.py  test_backend_c_comprehensions.py  test_backend_c_controlflow.py  test_backend_c_fallback.py  test_backend_c_inference.py  test_backend_c_integration.py  test_backend_c_oop.py  test_backend_c_stringmethods.py  test_backend_cpp_augassign.py  test_backend_cpp_basics.py  test_backend_cpp_comprehensions.py  test_backend_cpp_fstrings.py  test_backend_cpp_integration.py  test_backend_cpp_oop.py  test_backend_cpp_stringmethods.py  test_backend_go_augassign.py  test_backend_go_basics.py  test_backend_go_comprehensions.py  test_backend_go_integration.py  test_backend_go_oop.py  test_backend_go_stringmethods.py  test_backend_haskell_augassign.py  test_backend_haskell_basics.py  test_backend_haskell_comprehensions.py  test_backend_haskell_functional_quicksort.py  test_backend_haskell_integration.py  test_backend_haskell_oop.py  test_backend_haskell_stringmethods.py  test_backend_llvm_basic.py  test_backend_llvm_basics.py  test_backend_ocaml.py  test_backend_rust_augassign.py  test_backend_rust_basics.py  test_backend_rust_comprehensions.py  test_backend_rust_integration.py  test_backend_rust_oop.py  test_backend_rust_stringmethods.py  test_backends.py  (+27 more)
tests/benchmarks/: README.md
tests/examples/: README.md  error_demo.py  fstring_demo.py  llvm_jit_demo.py  oop_demo.py  simple_math.py  strict_verification_demo.py  type_inference_demo.py  variables.py  z3_array_bounds_poc.py
tests/translation/: README.md  container_iteration_test.py  simple_infer_test.py  simple_test.py  string_methods_test.py  test_2d_simple.py  test_container_iteration.py  test_control_flow.py  test_dataclass_basic.py  test_dict_comprehension.py  test_list_comprehension.py  test_list_slicing.py  test_math_import.py  test_namedtuple_basic.py  test_set_support.py  test_simple_slice.py  test_simple_string_ops.py  test_string_membership.py  test_string_methods.py  (+4 more)
translation_test/: index.html
use_cases/: index.html
(+228 files in other folders)
